fix layout bug

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -15,6 +15,7 @@ td {
 .site-header-logo {
   display: flex;
   min-height: 100px;
+  max-width: 250px;
   align-items: center;
 
   @include mq(md) {
